--- a/assets/modules/cooperative/views/social-form.html
+++ b/assets/modules/cooperative/views/social-form.html
@@ -33,9 +33,9 @@
         </div>
 
         <div class="form-group">            
-            <label for="inputEmail3" class="col-sm-2 control-label"> Página:</label>
+            <label for="inputEmail3" class="col-sm-2 control-label"> URL:</label>
             <div class="col-sm-5">
-                <input ng-model="social.data.page" type="text" class="form-control" placeholder="Url o nombre de la página" required="true" >
+                <input ng-model="social.data.url" type="text" class="form-control" placeholder="Url" required="true" >
             </div>            
         </div>
 
