--- a/assets/modules/cooperative/views/email.html
+++ b/assets/modules/cooperative/views/email.html
@@ -8,12 +8,13 @@
 
 <list-view 
     fields="[
-        {'name':'title', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'name', 'label':'Titulo', 'type': 'string', width:'40'},
         {'name':'email', 'label':'Fecha', 'type': 'string'},
     ]"
     label="email"
     module="cooperative/email"
-    url="cooperative/email">
+    url="cooperative/email"
+    rest="cooperative/email">
     
 </list-view>
 
