--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -14,7 +14,10 @@
     ]"
     label="notificación"
     module="notification"
-    url="notification_client">
+    url="content/notification"
+    rest="notification_client">
+
+
     
 </list-view>
 
