--- a/assets/modules/common/views/list.html
+++ b/assets/modules/common/views/list.html
@@ -1,5 +1,5 @@
 <p class="pull-right">
-    <a href="#/content/{{listView.module}}/new" class="btn btn-success">Nueva {{listView.label}}</a>
+    <a href="#/{{listView.url}}/new" class="btn btn-success">Agregar {{listView.label}}</a>
 </p>
 
 
