--- a/assets/modules/creditRequest/views/view.html
+++ b/assets/modules/creditRequest/views/view.html
@@ -2,8 +2,8 @@
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li><a href="#/request/credit">Creditos</a></li>
-    <li class="active">Detalle</li>
+    <li><a href="#/request/credit">Solicitudes de credito</a></li>
+    <li class="active">Credito</li>
 </ol>
 
 
