--- a/assets/modules/update/views/index.html
+++ b/assets/modules/update/views/index.html
@@ -81,7 +81,7 @@
                     <th>Archivo</th>
                     <th>Última carga</th>
                     <th>Última descarga</th>
-                    <th class="text-right">Acción</th>
+                    <th class="text-right"></th>
                 </tr>
             </thead>
             <tbody>
@@ -94,10 +94,10 @@
                         <button ng-click="update.onDBSelect(db, 1)" data-toggle="modal" data-target="#data-modal" type="button" class="btn btn-primary btn-sm">
                             <span class="glyphicon glyphicon-arrow-up"></span>
                         </button>
-
+<!-- 
                         <button ng-click="update.onDBSelect(db, 2)" data-toggle="modal" data-target="#data-modal" type="button" class="btn btn-warning btn-sm">
                             <span class="glyphicon glyphicon-arrow-down"></span>
-                        </button>
+                        </button> -->
 
                     </td>
                 </tr>
