--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -80,3 +80,7 @@ body {
     from { transform: scale(1) rotate(0deg);}
     to { transform: scale(1) rotate(360deg);}
 }
+
+.dinamyc-forms{
+    margin:20px  0 40px;
+}
