--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -1,40 +1,21 @@
-<h1>Solicitud de actualizacion</h1>
+<h1>Asociados</h1>
 
 <ol class="breadcrumb">
-	<li><a href="#">Inicio</a></li>
-	<li class="active">Asociados</li>
+    <li><a href="#">Inicio</a></li>
+    <li class="active">Asociados</li>
 </ol>
 
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>Asociado</th>
-            <th>Tipo</th>
-            <th>Fecha</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="request in userList.list">
-            <td>{{request.user}}</td>
-            <td>{{request.type.name}}</td>
-            <td>{{request.add_date}}</td>
-            <td class="text-right">
-                <a href="#/request/user/view/{{request.id}}/{{request.type.id}}" class="btn btn-primary btn-sm">
-                    Ver mas
-                </a>
-            </td>
-        </tr>
-    </tbody>
-</table>
 
-<div class="text-center">
-    <pagination 
-    items-per-page="10" 
-    total-items="userList.count" 
-    ng-model="userList.page" 
-    max-size="5" 
-    class="pagination-lg" 
-    ng-change="userList.setPage()">
-    </pagination>
-</div>
+<list-view 
+    fields="[
+        {'name':'code', 'label':'Código', 'type': 'string'},
+        {'name':'name', 'label':'Nombre', 'type': 'string', width:'40'},
+        {'name':'rate', 'label':'rate', 'type': 'string'},
+    ]"
+    label="Usuario"
+    module="users"
+    url="cooperative/users"
+    rest="credit">
+
+</list-view>
+
