user crete,edit,list done

--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -8,14 +8,14 @@
 
 <list-view 
     fields="[
-        {'name':'code', 'label':'Código', 'type': 'string'},
+        {'name':'username', 'label':'Cedula', 'type': 'string'},
         {'name':'name', 'label':'Nombre', 'type': 'string', width:'40'},
-        {'name':'rate', 'label':'rate', 'type': 'string'},
+        {'name':'email', 'label':'Email', 'type': 'string'},
     ]"
     label="Usuario"
     module="users"
     url="cooperative/users"
-    rest="credit">
+    rest="user">
 
 </list-view>
 
