--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -33,7 +33,7 @@
                 <a href="" data-toggle="dropdown">Cooperativa <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="#/cooperative/credits">Créditos</a></li>
-                    <li><a href="#/cooperative/users">Usuario</a></li>
+                    <li><a href="#/cooperative/users">Asociados</a></li>
                     <li><a href="#/cooperative/groups">Grupos</a></li>
                     <li><a href="#/cooperative/email">Correos</a></li>
                     <li><a href="#/cooperative/social">Redes Sociales</a></li>
