fix parent category, update database

--- a/assets/modules/page/views/form.html
+++ b/assets/modules/page/views/form.html
@@ -42,7 +42,14 @@
     		</div>
     	</div>
 
-    	<div class="row" ng-show="page.data.type == 2">
+        <div class="row">
+            <div class="form-group col-sm-1">
+                <label for="inputEmail3" class="control-label">Posición</label>
+                <input name="position" type="input" class="form-control" ng-model="page.data.position" placeholder="0">
+            </div>
+        </div>
+
+    	<div class="row">
     		<div class="form-group col-sm-8">
     			<label for="inputEmail3" class="control-label">Pagina padre</label>
 				<select class="form-control" ng-model="page.data.parent">
