--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -12,6 +12,7 @@
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
         {'name':'public', 'label':'Publicado', 'type': 'bool'},
     ]"
+    filters="['title', 'observation']" 
     label="notificación"
     module="notification"
     url="content/notification"
