--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -12,6 +12,7 @@
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
         {'name':'public', 'label':'Publicado', 'type': 'bool'},
     ]"
+    filters="['title']" 
     label="pagína"
     module="page"
     url="content/page"
