Add queryparam arg in list-view

--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -16,7 +16,8 @@
     label="notificación"
     module="notification"
     url="content/notification"
-    rest="notification_client">
+    rest="notification_client"
+    queryparams="type=1">
 
 
     
