--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -29,8 +29,6 @@
                 </div>                
             </div>
 
-
-
             <div class="row">
                 <div class="form-group col-sm-8">
                     <label for="inputEmail3" class="control-label">Titulo</label>
@@ -41,6 +39,13 @@
                             Ingrese un titulo
                         </small>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-sm-8">
+                    <label for="inputEmail3" class="control-label">Observación</label>
+                    <input name="observation" type="input" class="form-control" ng-model="notification.data.observation" required>
                 </div>
             </div>
 
@@ -103,12 +108,21 @@
                     <div class="row">
                         <div class="form-group col-sm-6">
                             <label for="inputEmail3" class="control-label">Buscar asociados por cedula</label>
-                            <input ng-change="notification.onChange()" type="input" class="form-control" ng-model="notification.autocomplete.key">
-                            
-                            <ul ng-show="notification.autocomplete.suggest" class="autocomplete">
-                                <li ng-click="notification.addUser(user)" ng-repeat="user in notification.autocomplete.suggest"><span>{{user.username}}</span> {{user.name}}</li>
-                            </ul>
-                            
+                            <div class="row">
+                                <div class="form-group col-sm-10">
+                                    <input type="input" class="form-control" ng-model="notification.autocomplete.key">
+
+                                    <ul ng-show="notification.autocomplete.suggest" class="autocomplete">
+                                        <li ng-click="notification.addUser(user)" ng-repeat="user in notification.autocomplete.suggest"><span>{{user.username}}</span> {{user.name}}</li>
+                                    </ul>
+
+                                </div>
+                                <div class="form-group col-sm-2">
+                                    <button ng-click="notification.suggest()" type="button" class="btn btn-success btn-sm">
+                                        <span class="glyphicon glyphicon-search"></span>
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
