Add edit notification type

--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -76,8 +76,8 @@
             </div>
 
 
-            <div ng-show="notification.action == 'new'">
-
+            <!-- <div ng-show="notification.action == 'new'"> -->
+            <div >
                 <div class="row">
                     <div class="form-group col-sm-10">
                         <label for="inputEmail3" class="control-label">Tipo de notificación</label>
