--- a/assets/css/mixin.less
+++ b/assets/css/mixin.less
@@ -101,3 +101,24 @@
         -webkit-appearance: none;
     }
 }
+
+.user-box{
+    margin: 40px 0 ;
+    position: relative;
+    padding-left:70px;
+    .glyphicon{
+        left: 0px;
+        position:absolute;
+        font-size: 50px;
+        color: #DDD;
+    }
+
+    h1{
+        font-size: 24px;
+        font-weight: normal;
+        margin-bottom:8px;
+    }
+    p{
+        color:#999;
+    }
+}
