--- a/assets/modules/credit/views/list.html
+++ b/assets/modules/credit/views/list.html
@@ -10,7 +10,8 @@
     fields="[
         {'name':'code', 'label':'Código', 'type': 'string'},
         {'name':'name', 'label':'Nombre', 'type': 'string', width:'40'},
-        {'name':'rate', 'label':'rate', 'type': 'string'},
+        {'name':'rate', 'label':'Tasa', 'type': 'string'},
+        {'name':'insurance', 'label':'Seguro', 'type': 'string'},
     ]"
     label="credito"
     module="credits"
