--- a/assets/css/statistic.less
+++ b/assets/css/statistic.less
@@ -17,10 +17,12 @@
 
     .data-general{
         list-style: none;
-        padding: 0px;
+        padding: 30px 0;
         margin: 30px 0px;
         text-align:center;
         overflow:hidden;
+        // border-bottom:1px #DDD solid;
+        border-top:1px #DDD solid;
 
         li{
             width: 25%;
