--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -39,6 +39,13 @@
         </div>
 
         <div class="row">
+            <div class="form-group col-sm-1">
+                <label for="inputEmail3" class="control-label">Posición</label>
+                <input name="position" type="input" class="form-control" ng-model="page.data.position" placeholder="0">
+            </div>
+        </div>
+        
+        <div class="row">
             <div class="form-group col-sm-8">
                 <label class="control-label">Tasa</label>
                 <input name="rate" type="input" class="form-control" ng-model="credit.data.rate" required>
