--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,7 @@
   min-width: 100px;
 }
 #notification-page .autocomplete li:hover {
-  background-color: #f9f9f9;
+  background-color: #F9F9F9;
 }
 #notification-page .user-list {
   margin: 0px;
@@ -65,16 +65,16 @@
   float: right;
 }
 #statistic-page .red {
-  color: #e3515e;
+  color: #E3515E;
 }
 #statistic-page .blue {
-  color: #35b6e0;
+  color: #35B6E0;
 }
 #statistic-page .green {
-  color: #57ad43;
+  color: #57AD43;
 }
 #statistic-page .orange {
-  color: #f7b547;
+  color: #F7B547;
 }
 #statistic-page .data-general {
   list-style: none;
@@ -201,4 +201,8 @@ body {
 }
 .crud-search {
   width: 240px;
+}
+.table-scroll {
+  overflow: scroll;
+  height: 400px;
 }
