--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -9,8 +9,9 @@
 <list-view 
     fields="[
         {'name':'title', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'observation', 'label':'Descripción', 'type': 'string'},
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
-        {'name':'public', 'label':'Publicado', 'type': 'bool'},
+        {'name':'public', 'label':'Publicado', 'type': 'bool'},        
     ]"
     filters="['title', 'observation']" 
     label="notificación"
