Update fiel filters

--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -12,10 +12,13 @@
         {'name':'name', 'label':'Nombre', 'type': 'string', width:'40'},
         {'name':'email', 'label':'Email', 'type': 'string'},
     ]"
+    filters="['user_cooperative__auth_user__username']" 
     label="Usuario"
     module="users"
     url="cooperative/users"
     rest="user">
 
 </list-view>
+
+
 
