--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -9,6 +9,7 @@
 <list-view 
     fields="[
         {'name':'title', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'type', 'label':'Tipo', 'type': 'string'},
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
         {'name':'public', 'label':'Publicado', 'type': 'bool'},
     ]"
