refactor list-view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,7 @@
   min-width: 100px;
 }
 #notification-page .autocomplete li:hover {
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 #notification-page .user-list {
   margin: 0px;
@@ -65,16 +65,16 @@
   float: right;
 }
 #statistic-page .red {
-  color: #E3515E;
+  color: #e3515e;
 }
 #statistic-page .blue {
-  color: #35B6E0;
+  color: #35b6e0;
 }
 #statistic-page .green {
-  color: #57AD43;
+  color: #57ad43;
 }
 #statistic-page .orange {
-  color: #F7B547;
+  color: #f7b547;
 }
 #statistic-page .data-general {
   list-style: none;
