--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -5,67 +5,17 @@
 	<li class="active">Paginas</li>
 </ol>
 
-
 <list-view 
     fields="[
         {'name':'title', 'label':'Titulo', 'type': 'string', width:'40'},
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
         {'name':'public', 'label':'Publicado', 'type': 'bool'},
     ]"
+
     filters="['title']" 
-    label="pagína"
-    module="page"
-    url="content/page"
+
+    actions="['add', 'edit', 'delete']"
+
     rest="pages">
-    
+
 </list-view>
-
-
-<!-- <p class="pull-right">
-	<a href="#/content/page/new" class="btn btn-success">Nueva pagina</a>
-</p>
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th width="40%">Titulo</th>
-            <th>Tipo</th>
-			<th>Fecha</th>
-			<th>Publicada</th>
-            <th></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="page in pageList.list | orderBy:'title'">
-            <td>{{page.title}}</td>
-            <td>
-                <span  ng-if="page.type == 2">Contenido</span>
-                <span ng-if="page.type == 1">*Categoría*</span>
-            </td>            
-			<td>{{page.add_date | date:'dd/MM/yyyy HH:mm:ss'}}</td>
-			<td>
-                <span  ng-if="page.published">SI</span>
-                <span ng-if="!page.published">NO</span>
-            </td>
-            <td class="text-right">
-                <a href="#/content/page/edit/{{page.id}}" class="btn btn-primary btn-sm">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-
-                <button ng-click="pageList.delete(page.id, $event)" type="button" class="btn btn-danger btn-sm">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </button>
-            </td>
-		</tr>
-	</tbody>
-</table>
-
-<div class="text-center">
-    <pagination 
-    items-per-page="20" 
-    total-items="pageList.count" 
-    ng-model="pageList.page" 
-    max-size="5" 
-    class="pagination-lg" 
-    ng-change="pageList.setPage()">
-    </pagination>
-</div> -->
