--- a/assets/modules/cooperative/views/social-list.html
+++ b/assets/modules/cooperative/views/social-list.html
@@ -5,43 +5,16 @@
     <li class="active">Social Networks</li>
 </ol>
 
-<p class="pull-right">
-    <a href="#/cooperative/social/new" class="btn btn-success">Nueva Red Social</a>
-</p>
-<table class="table table-hover">
-    <thead>
-        <tr>         
-            <th>Nombre</th>
-            <th>Tipo</th>
-            <th>Contenido</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="socialNetworok in social.data ">
-            <td>{{socialNetworok.name}}</td>
-            <td>{{socialNetworok.type}}</td>
-            <td>{{socialNetworok.page}}</td>          
-            <td class="text-right">
-                <a href="#/cooperative/social/edit/{{socialNetworok.id}}" class="btn btn-primary btn-sm">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
+<list-view 
+    fields="[
+        {'name':'name', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'type', 'label':'Red social', 'type': 'string'},
+    ]"
 
-                <button ng-click="social.delete(socialNetworok.id, $event)" type="button" class="btn btn-danger btn-sm">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+    filters="['name, email']" 
 
-<div class="text-center">
-    <pagination 
-    items-per-page="20" 
-    total-items="pageList.count" 
-    ng-model="pageList.page" 
-    max-size="5" 
-    class="pagination-lg" 
-    ng-change="pageList.setPage()">
-    </pagination>
-</div>
+    actions="['add', 'edit', 'delete']"
+    
+    rest="social">
+    
+</list-view>
